Fixed css that caused an overflow outside of the grocery container

--- a/src/App.scss
+++ b/src/App.scss
@@ -445,6 +445,7 @@ List
 
   .list-item {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 5px;
